@@ -249,6 +249,10 @@
 		<form id="withTitle">
 			<input class="required" name="hastitle" type="text" title="fromtitle" />
 		</form>
+		
+		<form id="ccform" method="get" action="">
+			<input id="cardnumber" name="cardnumber" />
+		</form>
 	</div>
 	
 	<ol id="tests"></ol>
